fix(AsideHeader/CustomBackground)!: fix stretching background

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -112,6 +112,7 @@ $block: '.#{variables.$ns}aside-header';
             bottom: 0;
 
             display: flex;
+            width: var(--gn-aside-header-size);
 
             z-index: -1;
         }
